--- a/SA_ICT9O_Q3Exercise4_Abillar.html
+++ b/SA_ICT9O_Q3Exercise4_Abillar.html
@@ -38,7 +38,7 @@
   <h3>Dolores, Eastern Samar</h3>
   <img src="https://zamboanga.com/z/images/3/37/Dolores_east_samar_municipal_hall.jpg">
   <p>Dolores, Eastern Samar, is my province. It is a place I visit every few months. Getting there is pretty rough, literally, roads going there are full of potholes. It's a 3-6 hour drive going there from Tacloban, plus the extra 1-2 hours going to Tacloban using a plane. You'll be lucky to arrive there within 5 hours from Manila. It's worth it once you arrive though. Dolores has good beaches, alright roads, but most importantly, a ton of food.  /p>
-  <p>What to do in Dolores: Go to the beach, go island hopping, or go eat in a restaurant or cafe.</p>
+  <p>What to do in Dolores: Go to the beach, go island hopping, or go eat in a restaurant or cafe. An example of a good place to eat is a cafe called 'The Good Cup' it has good coffee (? not sure, don't drink coffee) great burgers and yummy fries. (Definitely not advertising my cousin's cafe)</p>
   <p></p>
 </div>
 </body>
